<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margem"
    android:orientation="vertical"
    android:background="#87CEFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="Suspicious0dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="115dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/william"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contato"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="10sp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celularNumber"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="70dp"/>

  '      <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="70dp">
                <TextView
                    android:text="Versão"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/versao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="25sp" />
         </LinearLayout>'

    </LinearLayout>




</LinearLayout>